--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT = 3000;
+DATABASE_URL="postgresql://postgres.srxyafbhrmbfjlayiojk:h3XS6MI0lMUnlNS6@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"  
+DIRECT_URL="postgresql://postgres.srxyafbhrmbfjlayiojk:h3XS6MI0lMUnlNS6@aws-0-us-west-1.pooler.supabase.com:5432/postgres" 
