--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^6.10.1",
     "express": "^5.1.0",
     "node-cron": "^4.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.10.1"
   }
 }
